# learn-wgpu

./: Cargo.toml  README.md  build_shaders.py  shader.wgsl
data/spirv/: shader_ps.spv  shader_vs.spv
data/spirv/glsl/: fragment.spv  vertex.spv
src/: camera.rs  light.rs  main.rs  material.rs  model.rs  renderer.rs  shader.wgsl  shader_builder.rs  shader_compiler.rs  texture.rs
src/pipelines/: compute_pipeline.rs  debug_pipeline.rs  mod.rs  pbr_pipeline.rs  pipeline.rs
src/shaders/: compute_prepass.comp  fragment.frag  light.vert  shader.hlsl  simple_frag.frag  simple_transform.vert  vertex_shader.vert
src/shaders-glsl/: fragment.frag  vertex_shader.vert
