[package]
name = "learn_wgpu"
version = "0.1.0"
edition = "2021"

[dependencies]
winit = { version = "0.29", features = ["rwh_05"] }
env_logger = "0.10"
log = "0.4"
wgpu = { version = "23.0", features = ["spirv"] }
pollster = "0.4.0"
bytemuck = { version = "1.20.0", features = ["derive"] }
image = { version = "0.24", features = [
    "png",
    "jpeg",
], default-features = false }
anyhow = "1.0.94"
shaderc = "0.8.3"
